--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "connect": "^3.7.0",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "express-http-proxy": "^2.0.0",
+    "express-session": "^1.18.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^8.3.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "type": "module"
 }
