--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,13 @@
 {
+  "scripts": {
+    "start": "node index.js",
+    "build": "node index.js"
+  },
   "dependencies": {
     "connect": "^3.7.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-http-proxy": "^2.0.0",
     "express-session": "^1.18.0",
